--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "homepage": "http://feelings-react.wpocean.com",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.15",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -15,18 +20,16 @@
     "react-animated-css": "^1.2.1",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^18.0.0",
-    "react-fancybox": "^0.2.5",
     "react-medium-image-zoom": "^4.3.4",
     "react-modal-video": "^2.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.7.16",
     "react-slick": "^0.30.2",
     "react-sticky-header": "^0.2.0",
     "react-toastify": "^8.2.0",
-    "react-wow": "^1.0.0",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^9.2.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.50.1",
