--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animated-css": "^1.2.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-medium-image-zoom": "^4.3.4",
