--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT = '3036'
+
+REACT_APP_GOOGLE_CLIENT_ID=
+  "29203588820-56v0thl6kripofbq34sas007isfrrr69.apps.googleusercontent.com";
+REACT_APP_GOOGLE_API_KEY= "AIzaSyBiZitqjfzuyvA_tcT_yRc0i-gWmihQ36M";
