--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ajv-keywords": "^5.1.0",
     "bootstrap": "^5.1.3",
     "fancybox": "^3.0.1",
+    "gapi-script": "^1.2.0",
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animated-css": "^1.2.1",
